--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 @import "https://fonts.googleapis.com/css?family=Roboto:300,300i,400,500,700";
+html,body,*{
+  line-height: 25px;
+  letter-spacing: 0px;
+  font-weight: 700;
+}
 .col-xs-20,
 .col-sm-20,
 .col-md-20,
@@ -5096,6 +5101,33 @@ body.boxed {
   max-width: 400px;
   overflow: hidden;
   text-overflow: ellipsis;
+  transition: all 0.4s ease-in-out;
+}
+.content-3lines-ellipsis.o{
+  display: -webkit-box;
+  height: 200px;
+  -webkit-line-clamp: 10;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.expend{
+  position: relative;
+  color: #72ab4c !important;
+}
+.expend::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -20px;
+  height: 20px;
+  width: 20px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%2372ab4c' class='bi bi-caret-down-fill' viewBox='0 0 16 16'%3E%3Cpath d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/%3E%3C/svg%3E");
+  background-position: center center;
+  background-repeat: no-repeat;
+  transition: all 0.6s ease-in-out;
+}
+.content-3lines-ellipsis.o + .expend::before{
+  transform: rotate(-180deg);
 }
 .with_border .item-media,
 .with_border .entry-thumbnail {
@@ -10431,6 +10463,7 @@ aside .with_padding {
 .apsc-theme-4 .media-name {
   padding: 0 0 0 10px;
   display: inline-block;
+  margin-top: 18px;
 }
 .apsc-theme-4 .apsc-count {
   border-radius: 0;
